update more response - update lucky response - add status response